# natural-disaster-survival-tool

./: README.md
natural-disaster-survival-tool/: CMakeLists.txt  config.json  main.py  requirements.txt
natural-disaster-survival-tool/include/: DisasterManager.h  PlayerManager.h  SurvivalTool.h
natural-disaster-survival-tool/src/: DisasterManager.cpp  PlayerManager.cpp  SurvivalTool.cpp  __init__.py  config.py  evader.py  main.cpp  scanner.py
natural-disaster-survival-tool/tests/: test_survival.cpp  test_tool.py
